# ot-harjoitustyo

./: README.md
budget-app/: .coverage  .coveragerc  .env  .gitignore  .pylintrc  DATABASE_FILE_PATH  budget-app  pyproject.toml  tasks.py
budget-app/data/: budgets.sqlite  database.sqlite  test-database.sqlite
budget-app/dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
budget-app/src/: config.py  database_connection.py  index.py  initialize_database.py  pyproject.toml  user.py
budget-app/src/budget_user/: budget.py  user.py
budget-app/src/db/: db.sqlite3
budget-app/src/repos/: budget_repo.py  user_repo.py
budget-app/src/service/: service_budget.py
budget-app/src/tests/repos/: budget_repo_test.py  user_repo_test.py
budget-app/src/tests/service/: budget_service_test.py
budget-app/src/user_interface/: budgets_view.py  create_user.py  login.py  login_view.py  ui.py
dokumentaatio/: tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: luokkakaavio.md
