[tool.poetry]
name = "budget-app"
version = "0.1.0"
description = ""
authors = ["Ada Rautiainen <ada.rautiainen@gmail.com>"]
readme = "README.md"
packages = [{include = "budget_app"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
