[tool.poetry]
name = "budget-app"
version = "0.1.0"
description = ""
authors = ["Ada Rautiainen <ada.rautiainen@gmail.com>"]
readme = "README.md"
packages = [{include = "budget_app"}]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^1.0.0"
invoke = "^^.7.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
coverage = "^7.2.2"
pytest-dotenv = "^0.5.2"
pylint = "^2.17.2"
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
